Open Source Code link added

--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@
         </div>
       </div>
     </div>
+    <span id="OpenSourceCode"
+      >Open-source code by
+      <a href="https://github.com/esthermwk/Weather-App">Esther Mak</a></span
+    >
     <script src="js.js"></script>
   </body>
 </html>
