target blank updated

--- a/index.html
+++ b/index.html
@@ -157,7 +157,9 @@
     </div>
     <span id="OpenSourceCode"
       >Open-source code by
-      <a href="https://github.com/esthermwk/Weather-App">Esther Mak</a></span
+      <a href="https://github.com/esthermwk/Weather-App" target="_blank"
+        >Esther Mak</a
+      ></span
     >
     <script src="js.js"></script>
   </body>
