--- a/index.html
+++ b/index.html
@@ -41,7 +41,15 @@
             <h1 id="cityName"></h1>
             <h2>Last update:</h2>
             <div class="row">
-              <div class="col"><h3>☁️</h3></div>
+              <div class="col">
+                <h3>
+                  <img
+                    src="http://openweathermap.org/img/wn/10d@2x.png"
+                    alt="weatherIcon"
+                    id="icon"
+                  />
+                </h3>
+              </div>
               <div class="col">
                 <h4>
                   <span id="description"></span> <br /><span class="tempElement"
