--- a/index.html
+++ b/index.html
@@ -46,14 +46,15 @@
                   <img
                     src="http://openweathermap.org/img/wn/10d@2x.png"
                     alt="weatherIcon"
-                    id="icon"
+                    class="icon"
                   />
                 </h3>
               </div>
               <div class="col">
                 <h4>
-                  <span id="description"></span> <br /><span class="tempElement"
-                    >0</span
+                  <span id="description"></span> <br /><span
+                    class="tempElement"
+                  ></span
                   ><span class="temp"
                     ><a href="#" id="celsius-link">°C</a> |
                     <a href="#" id="fahrenheit-link">°F</a></span
