--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   <img
                     src="http://openweathermap.org/img/wn/10d@2x.png"
                     alt="weatherIcon"
-                    class="icon"
+                    id="icon"
                   />
                 </h3>
               </div>
