--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </div>
 
           <div class="container">
-            <div class="row">
+            <div class="weather-forecast">
               <div class="col-2">
                 19 March
                 <br />
@@ -97,69 +97,6 @@
                   <a href="#" id="fahrenheit-link">°F</a></span
                 >
               </div>
-              <div class="col-2">
-                20 March
-                <br />
-                <div class="day">Sunday</div>
-
-                <div class="emoji">🌤️</div>
-
-                19/22<span class="temp"
-                  ><a href="#" id="celsius-link">°C</a> |
-                  <a href="#" id="fahrenheit-link">°F</a></span
-                >
-              </div>
-              <div class="col-2">
-                21 March
-                <br />
-                <div class="day">Monday</div>
-
-                <div class="emoji">☔</div>
-
-                27/21<span class="temp"
-                  ><a href="#" id="celsius-link">°C</a> |
-                  <a href="#" id="fahrenheit-link">°F</a></span
-                >
-              </div>
-              <div class="col-2">
-                22 March
-                <br />
-                <div class="day">Tuesday</div>
-
-                <div class="emoji">☔</div>
-
-                28/23<span class="temp"
-                  ><a href="#" id="celsius-link">°C</a> |
-                  <a href="#" id="fahrenheit-link">°F</a></span
-                >
-              </div>
-              <div class="col-2">
-                23 March
-                <br />
-                <div class="day">Wednesday</div>
-
-                <div class="emoji">☁️</div>
-
-                29/23<span class="temp"
-                  ><a href="#" id="celsius-link">°C</a> |
-                  <a href="#" id="fahrenheit-link">°F</a></span
-                >
-              </div>
-              <div class="col-2">
-                24 March
-                <br />
-                <div class="day">Thursday</div>
-
-                <div class="emoji">☀️</div>
-
-                29/23<span class="temp"
-                  ><a href="#" id="celsius-link">°C</a> |
-                  <a href="#" id="fahrenheit-link">°F</a></span
-                >
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
     <span id="OpenSourceCode"
