--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </div>
 
           <div class="container">
-            <div class="weather-forecast">
+            <div id="weather-forecast">
               <div class="col-2">
                 19 March
                 <br />
