--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
           </div>
 
           <div class="container">
+            <div class="col-2">
             <div id="weather-forecast">
-              <div class="col-2">
-                19 March
+            <div class="weather-forecast-day"></div>
                 <br />
-                <div class="day">Tomorrow</div>
-                <div class="emoji">🌤️</div>
+      
+                <div class="icon"><img src="http://openweathermap.org/img/wn/10d@2x.png" alt="weatherIcon"/></div>
 
                 25/20<span class="temp"
                   ><a href="#" id="celsius-link">°C</a> |
