--- a/index.html
+++ b/index.html
@@ -82,11 +82,7 @@
       <div class="weather-forecast-date">
             <div class="row">
             <div class="col-2">
-              <div id="weather-forecast">Sat
-                <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="weatherIcon" width="72"/> 
-                <div class="forecast-temp"><span class="max-temp"
-                  >25</span>° | <span class="min-temp">20</span><span id="celsius-link">°</span></div>
-               </div>  
+              <div id="weather-forecast"> </div> 
          </div>     
       </div>
     </div>
