--- a/index.html
+++ b/index.html
@@ -79,13 +79,7 @@
               <br />
             </p>
           </div>
-      <div class="weather-forecast-date">
-            <div class="row">
-            <div class="col-2">
-              <div id="weather-forecast"> </div> 
-         </div>     
-      </div>
-    </div>
+      <div id="weather-forecast" class="weather-forecast-date"></div>
  
 
 <span id="OpenSourceCode">Open-source code by <a href="https://github.com/esthermwk/Weather-App" target="_blank"
