--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
             </p>
           </div>
       <div id="weather-forecast" class="weather-forecast-date"></div>
- 
+ </div>
+  </div>
 
 <span id="OpenSourceCode">Open-source code by <a href="https://github.com/esthermwk/Weather-App" target="_blank"
         > Esther Mak</a></span>
