--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
             placeholder="Enter a city"
             autofocus="on"
           />
-          <input type="submit" value="🔎" />
+          <input type="submit" id="search-btn" value="Search 🔍" />
           <input
             type="submit"
             id="current-location-btn"
-            value="📍"
+            value="Current location 📍"
           />
         </form>
         <div class="row">
