--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
                     class="tempElement"
                   ></span
                   ><span class="temp"
-                    ><a href="#" id="celsius-link">°C</a> |
-                    <a href="#" id="fahrenheit-link">°F</a></span
+                    ><a href="#" id="celsius-link">°C</a> | <a href="#" id="fahrenheit-link">°F</a></span
                   >
                 </h4>
               </div>
@@ -65,13 +64,12 @@
           </div>
           <div class="col">
             <p id="otherInfo">
-              Feels like: <span id="feelsLike"></span>
-              <span class="temp"
-                >°C
+              Feels like: <span id="feelsLike"></span><span class="temp2"
+                >°C</span>
                             <br />
               Highs | Lows: <span id="high"></span> | <span id="low"></span
-              ><span class="temp"
-                ></span> °C
+              ><span class="temp2"
+                >°C</span>  
               <br />
               Humidity: <span id="humidity"></span>%
               <br />
